# email-triage-openenv

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
api/: server.py
env/: data_generator.py  environment.py  models.py  tasks.py
hf-space/: .env.example  Dockerfile  README.md  baseline_inference.py  openenv.yaml  pyproject.toml
hf-space/api/: server.py
hf-space/tests/: test_env.py
server/: app.py
tests/: test_env.py
